--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
-    name: your-django-app
+    env: python
+    name: ecolution
     buildCommand: pip install -r requirements.txt
-    startCommand: python manage.py runserver 0.0.0.0:8000
-    releaseCommand: python manage.py migrate
+    startCommand: python ECM2434/manage.py runserver 0.0.0.0:8000
+    releaseCommand: python ECM2434/manage.py migrate
