--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
+infrastructureVersion: v1
+
 services:
-  - type: web
+  - name: ecolution
+    type: web
     env: python
-    name: ecolution
     buildCommand: pip install -r requirements.txt
     startCommand: python ECM2434/manage.py runserver 0.0.0.0:8000
     releaseCommand: python ECM2434/manage.py migrate
